--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
             <h2>Frank Ocean - Pink and White</h2>
             <h4>Added by Ms. Kelsey</h4>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/uzS3WG6__G4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-            <p>This song has a chill vibe, it's good to zone out to. Plus Frank Ocean has the voice of an angel. <3</p>
+            <p>This song has a chill vibe, it's good to zone out to. Plus Frank Ocean has the voice of an angel.</p>
         </div>
-        
+        <div id="xxxtentacion" class="song">
+            <h2>XXXTENTACION - I spoke to the devil in miami, he said everything would be fine</h2>
+            <h4>Added by Jose Delgado</h4>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/THdie-5vC-s" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+            <p>This song has hits people that know XXXTentacion. </p>
+        </div>
     
     </body>
 
